WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181989
[YARR] Extend size of fixed characters bulk matching in 64bit platform
https://bugs.webkit.org/show_bug.cgi?id=181989
Summary
[YARR] Extend size of fixed characters bulk matching in 64bit platform
Yusuke Suzuki
Reported
2018-01-23 09:55:55 PST
We can use 64bit registers to perform bulk matching.
Attachments
Patch
(13.95 KB, patch)
2018-01-23 10:16 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-sierra
(2.17 MB, application/zip)
2018-01-23 11:28 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews106 for mac-sierra-wk2
(2.62 MB, application/zip)
2018-01-23 11:32 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews114 for mac-sierra
(2.97 MB, application/zip)
2018-01-23 11:54 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews122 for ios-simulator-wk2
(2.30 MB, application/zip)
2018-01-23 15:18 PST
,
EWS Watchlist
no flags
Details
Patch
(12.78 KB, patch)
2018-01-28 20:40 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(12.78 KB, patch)
2018-01-28 20:56 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(12.82 KB, patch)
2018-01-28 21:47 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(19.47 KB, patch)
2018-06-03 18:02 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(20.64 KB, patch)
2018-06-03 18:23 PDT
,
Yusuke Suzuki
msaboff
: review+
Details
Formatted Diff
Diff
Show Obsolete
(9)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2018-01-23 10:16:55 PST
Created
attachment 332036
[details]
Patch
EWS Watchlist
Comment 2
2018-01-23 10:19:17 PST
Attachment 332036
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/LinkBuffer.h:343: Wrong number of spaces before statement. (expected: 9) [whitespace/indent] [4] WARNING: This machine could support 4 simulators, but is only configured for 3. WARNING: Please see <
https://trac.webkit.org/wiki/IncreasingKernelLimits
>. Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 3
2018-01-23 11:28:06 PST
Comment on
attachment 332036
[details]
Patch
Attachment 332036
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/6184138
New failing tests: js/regexp-unicode.html
EWS Watchlist
Comment 4
2018-01-23 11:28:07 PST
Created
attachment 332046
[details]
Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5
2018-01-23 11:32:27 PST
Comment on
attachment 332036
[details]
Patch
Attachment 332036
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/6184155
New failing tests: js/regexp-unicode.html
EWS Watchlist
Comment 6
2018-01-23 11:32:28 PST
Created
attachment 332047
[details]
Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7
2018-01-23 11:54:42 PST
Comment on
attachment 332036
[details]
Patch
Attachment 332036
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/6184260
New failing tests: js/regexp-unicode.html
EWS Watchlist
Comment 8
2018-01-23 11:54:43 PST
Created
attachment 332050
[details]
Archive of layout-test-results from ews114 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 9
2018-01-23 13:35:53 PST
Comment on
attachment 332036
[details]
Patch
Attachment 332036
[details]
did not pass jsc-ews (mac): Output:
http://webkit-queues.webkit.org/results/6185745
New failing tests: jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-ftl-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-no-ftl jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-dfg-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-no-cjit jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-ftl-no-cjit jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-no-llint es6.yaml/es6/RegExp_y_and_u_flags_u_flag_Unicode_code_point_escapes.js.default
EWS Watchlist
Comment 10
2018-01-23 15:18:30 PST
Comment on
attachment 332036
[details]
Patch
Attachment 332036
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/6186611
New failing tests: js/regexp-unicode.html fast/text/combining-character-sequence-fallback-crash.html
EWS Watchlist
Comment 11
2018-01-23 15:18:31 PST
Created
attachment 332083
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 12
2018-01-23 18:17:07 PST
Comment on
attachment 332036
[details]
Patch
Attachment 332036
[details]
did not pass jsc-ews (mac): Output:
http://webkit-queues.webkit.org/results/6185742
New failing tests: jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-ftl-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-no-ftl jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-dfg-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-no-cjit jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-ftl-no-cjit jsc-layout-tests.yaml/js/script-tests/regexp-unicode.js.layout-no-llint es6.yaml/es6/RegExp_y_and_u_flags_u_flag_Unicode_code_point_escapes.js.default
Yusuke Suzuki
Comment 13
2018-01-28 20:40:08 PST
Created
attachment 332505
[details]
Patch
EWS Watchlist
Comment 14
2018-01-28 20:42:01 PST
Attachment 332505
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/LinkBuffer.h:343: Wrong number of spaces before statement. (expected: 9) [whitespace/indent] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 15
2018-01-28 20:56:44 PST
Created
attachment 332506
[details]
Patch
EWS Watchlist
Comment 16
2018-01-28 20:58:59 PST
Attachment 332506
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/LinkBuffer.h:343: Wrong number of spaces before statement. (expected: 9) [whitespace/indent] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 17
2018-01-28 21:47:02 PST
Created
attachment 332507
[details]
Patch
EWS Watchlist
Comment 18
2018-01-28 21:48:59 PST
Attachment 332507
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/LinkBuffer.h:343: Wrong number of spaces before statement. (expected: 9) [whitespace/indent] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 19
2018-06-03 18:02:23 PDT
Created
attachment 341881
[details]
Patch
EWS Watchlist
Comment 20
2018-06-03 18:03:45 PDT
Attachment 341881
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/LinkBuffer.h:386: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 21
2018-06-03 18:23:19 PDT
Created
attachment 341883
[details]
Patch
EWS Watchlist
Comment 22
2018-06-03 18:25:48 PDT
Attachment 341883
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/LinkBuffer.h:386: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 23
2018-06-07 19:08:11 PDT
Ping?
Yusuke Suzuki
Comment 24
2018-06-12 04:20:50 PDT
Michael, can you take a look?
Yusuke Suzuki
Comment 25
2018-06-29 07:22:05 PDT
Ping?
Yusuke Suzuki
Comment 26
2018-07-26 16:04:09 PDT
Ping?
Michael Saboff
Comment 27
2018-08-20 12:08:52 PDT
Comment on
attachment 341883
[details]
Patch r=me Sorry for the review delay. You may need to rebase due to recent RegExp disassembly changes.
Yusuke Suzuki
Comment 28
2018-08-20 20:14:09 PDT
(In reply to Michael Saboff from
comment #27
)
> Comment on
attachment 341883
[details]
> Patch > > r=me > Sorry for the review delay. > You may need to rebase due to recent RegExp disassembly changes.
Thanks! Fixed.
Yusuke Suzuki
Comment 29
2018-08-20 20:29:38 PDT
Committed
r235104
: <
https://trac.webkit.org/changeset/235104
>
Radar WebKit Bug Importer
Comment 30
2018-08-20 20:30:39 PDT
<
rdar://problem/43542780
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug